Customized the db connection string

--- a/BlazorClaimsRolesPolicy/appsettings.json
+++ b/BlazorClaimsRolesPolicy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorClaimsRolesPolicy-72BBADEA-B9B1-46A7-B6AA-629EC537424C;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KENNEDYMUNGAI;Database=BlazorClaimsRolesPolicyAnother;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
